// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeCTAButton should disable the component when quotes are loading and there are no existing quotes 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
  >
    <p
      class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--color-text-alternative"
    />
  </div>
</div>
`;

exports[`BridgeCTAButton should render the component when amount and dest token is missing 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
  >
    <p
      class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--color-text-alternative"
    >
      Select amount
    </p>
  </div>
</div>
`;

exports[`BridgeCTAButton should render the component when amount, dest chain and dest token are missing (defaults set 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
  >
    <p
      class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--color-text-alternative"
    >
      Select amount
    </p>
  </div>
</div>
`;

exports[`BridgeCTAButton should render the component's initial state 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
  >
    <p
      class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--color-text-alternative"
    >
      Select token
    </p>
  </div>
</div>
`;
